--- a/style.css
+++ b/style.css
@@ -61,7 +61,8 @@ main {
     flex-direction: column;
     align-items: center;
     gap: 21px;
-    box-shadow: 0px 17px 30px -25px #20293A;
+    box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.03), 
+                0px 8px 12px 0px rgba(0, 0, 0, 0.08);
 }
 
 #inputEmail {
@@ -92,4 +93,5 @@ main {
     border-radius: 13px;
     border: 1px solid white;
     color: white;
+    cursor: pointer;
 }
